--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-gesture-handler": "^1.0.16",
     "react-native-image-picker": "^0.28.0",
     "react-native-picker-checkbox": "^1.0.8",
+    "react-native-select-multiple": "^1.2.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0"
   },
