--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-image-picker": "^0.28.0",
+    "react-native-orientation": "^3.1.3",
     "react-native-picker-checkbox": "^1.0.8",
     "react-native-select-multiple": "^1.2.0",
     "react-native-vector-icons": "^6.3.0",
