--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-root-import": "^6.1.0",
     "react": "16.6.3",
     "react-native": "0.58.5",
     "react-native-elements": "^1.1.0",
@@ -20,7 +21,8 @@
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
