--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-root-import": "^6.1.0",
     "react": "16.6.3",
     "react-native": "0.58.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-image-picker": "^0.28.0",
