--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-plugin-root-import": "^6.1.0",
+    "moment": "^2.24.0",
     "react": "16.6.3",
     "react-native": "0.58.5",
     "react-native-datepicker": "^1.7.2",
